# goit-web-hw-08

./: part1_main.py  part_2_main.py  pyproject.toml
config/: config.ini
consumers/: consumer.py  consumer_email.py  consumer_sms.py
models/: contact.py  models.py
search/: search_quotes.py
services/: connect.py  load_data.py  producer.py
