[tool.poetry]
name = "goit-web-hw-08"
version = "0.1.0"
description = ""
authors = ["alexfighterbomber <ssamsobi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mongoengine = "^0.29.1"
redis = "^5.2.1"
redis-lru = "^0.1.2"
pika = "^1.3.2"
faker = "^37.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
